# wasp-setup

./: .gitmodules  CHANGELOG.md  README.md  ascii logo.txt  osrs-setup.sh  setup.cmd  setup.sh  waspbot-installer.cmd
.github/workflows/: bump-version.yml  version.yml
linux/: README.md  bolt-setup.sh  bolt-uninstall.sh  myprofile.properties  osrs-setup.sh  runelite-setup.sh  runelite-uninstall.sh  setup.sh  simba-setup.sh  simba-uninstall.sh
nsis/: simba-setup.nsi
nsis/Simba/Data/: default.simba  packages.ini
rust/: Cargo.toml  build.rs
rust/src/: main.rs  utils.rs
wix/: wasp-setup.wxs
