[package]
name = "wasp-setup"
version = "0.1.0"
edition = "2021"
authors = ["Torwent"]
description = "A simple Simba installer that sets up all resources needed for WaspScripts"
license = "GPLv3"

[dependencies]
egui = "0.31.1"
eframe = "0.31.1"
image = "0.25.6"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6"
winapi = { version = "0.3", features = ["winuser"] }
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
] }
[build-dependencies]
winres = "0.1.12"